--- a/intro_ux/landing/css/landing.css
+++ b/intro_ux/landing/css/landing.css
@@ -6,6 +6,10 @@
 
 /* Clases de utilidades */
 
+.h-100 {
+  height: 100%;
+}
+
 .h-xs-1x {
    height: 75px;
 }
@@ -23,6 +27,10 @@
 }
 
 /* Reglas para pantallas medianas */
+/* clases para alineación horizontal*/
+.text-xs-center {
+  text-align: center;
+}
 
 @media screen and (min-width: 960px){
 
@@ -42,7 +50,10 @@
       height: 300px;
    }
 
-}
+   .text-md-right {
+     text-align: right;
+   }
+
 
 
 .wh-100 {
@@ -122,4 +133,8 @@ img {
 }
 .width-auto {
    width: auto !important
+}
+
+.cortina{
+  background-color: rgba(255,255,255,0.5);
 }
